feat: Updating with fixes